--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,7 +92,7 @@ jobs:
 
   # Linux x64 打包
   build-linux-x64:
-    runs-on: ubuntu-20.04  # 使用旧版 Ubuntu 以兼容更多系统 (glibc 2.31)
+    runs-on: ubuntu-22.04  # Ubuntu 22.04, glibc 2.35, 兼容 Debian 12+
     steps:
       - name: 检出代码
         uses: actions/checkout@v4
